# burn-custom-wgpu-kernel

./: Cargo.toml  README.md
examples/: custom-wgpu-kernel.rs
src/: backward.rs  forward.rs  lib.rs
